<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <android.support.v7.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:id="@+id/toolBar"
        android:elevation="4dp"
        android:background="@color/main_color">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text= "@string/create__mybiz_account"
                android:layout_gravity="right"
                android:gravity="center"
                android:textColor="@color/white"
                android:layout_marginRight="20dp"/>




        </LinearLayout>
    </android.support.v7.widget.Toolbar>
    
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="fill_parent">
        
        <EditText
            android:layout_marginTop="50dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name"
            style="@style/EditTextStyle"
            android:id="@+id/name_et"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            />

        <EditText
            android:layout_marginTop="25dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/name_et"
            style="@style/EditTextStyle"
            android:id="@+id/address_et"
            android:hint="@string/address"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"/>

        <EditText
            android:layout_marginTop="25dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/address_et"
            style="@style/EditTextStyle"
            android:id="@+id/town_ed"
            android:hint="@string/town"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"/>


        <RadioGroup
            android:id="@+id/radio_grp"
            android:layout_marginTop="30dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/town_ed"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp">

            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/owner"/>

            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/service"/>
        </RadioGroup>


        <LinearLayout
            android:layout_below="@+id/radio_grp"
            android:layout_marginTop="30dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/have_account"
                android:padding="6dp"/>

            <TextView
                android:layout_width="wrap_content"

                android:textStyle="bold"
                android:textColor="@color/red_create_account"
                android:layout_height="match_parent"
                android:text="@string/log_in"
                android:padding="6dp"/>


        </LinearLayout>


    <android.support.v7.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:id="@+id/toolBar1"
        android:layout_alignParentBottom="true"
        android:background="#1000">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
               >

                <TextView
                    android:layout_marginLeft="30dp"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/back"/>
            </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            ></LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="right"
                >

                <TextView
                    android:paddingRight="10dp"
                    android:layout_marginRight="50dp"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/next"/>
            </LinearLayout>










        </LinearLayout>
    </android.support.v7.widget.Toolbar>

    </RelativeLayout>


</LinearLayout>