<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <android.support.v7.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:id="@+id/toolBar"
        android:elevation="4dp"
        android:background="@color/main_color">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text= "@string/create__mybiz_account"
                android:layout_gravity="right"
                android:gravity="center"
                android:textColor="@color/white"
                android:layout_marginRight="20dp"/>




        </LinearLayout>
    </android.support.v7.widget.Toolbar>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="fill_parent">

        <Spinner
            android:layout_marginTop="50dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"></Spinner>

        <EditText
            android:layout_marginTop="135dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/name_et"
            style="@style/EditTextStyle"
            android:id="@+id/address_et"
            android:hint="@string/short_description"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/limit_to_30_char"
            android:layout_below="@id/address_et"
            android:layout_marginLeft="20dp"/>

        <TextView
            android:layout_marginTop="75dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/address_et"
            style="@style/EditTextStyle"
            android:id="@+id/town_ed"
            android:hint="@string/additional_properties"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"/>

        <EditText
            android:gravity="top"
            android:layout_marginTop="2dp"
            android:layout_width="match_parent"
            android:layout_height="110dp"
            android:layout_below="@id/town_ed"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/edit_text_boarder"/>




        <android.support.v7.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:id="@+id/toolBar1"
            android:layout_alignParentBottom="true"
            android:background="#1000">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    >

                    <TextView
                        android:layout_marginLeft="30dp"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:text="@string/back"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    ></LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="right"
                    >

                    <TextView
                        android:paddingRight="10dp"
                        android:layout_marginRight="50dp"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:text="@string/next"/>
                </LinearLayout>










            </LinearLayout>
        </android.support.v7.widget.Toolbar>

    </RelativeLayout>


</LinearLayout>