<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff"
    android:orientation="vertical"

    tools:context="com.screensmybiz.CreateAccount">

    <android.support.v7.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="67dp"
        android:id="@+id/toolBar"
        android:elevation="6dp"
        android:background="@color/main_color">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/create_account"
                android:layout_gravity="right"
                android:gravity="center"
                android:textColor="@color/white"
                android:textSize="11.56pt"
                android:layout_marginRight="10dp"/>

            <LinearLayout
                android:layout_width="150dp"
                android:layout_height="match_parent"></LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/skip"
                android:gravity="center"
                android:textColor="@color/white"
                android:textSize="9.5pt"
                android:layout_marginLeft="10dp"/>


        </LinearLayout>
    </android.support.v7.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
         >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="2"
                android:gravity="center">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/private_user"
                    android:maxWidth="200dp"
                    android:minWidth="200dp"
                    android:gravity="center"
                    android:maxLines="3"
                    android:textSize="8.43pt"
                    android:textColor="#87000000"
                    />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="2"
                android:gravity="center">

                <Button

                    android:elevation="6dp"
                    android:gravity="center_vertical"
                    android:layout_width="210dp"
                    android:layout_height="36dp"
                    android:text="אני משתמש פרטי"
                    android:textStyle="bold"
                    android:textSize="10pt"
                    android:textColor="@color/white"
                    android:background="@drawable/rounded_main_color_button"
                    android:paddingRight="15dp"
                    android:paddingLeft="15dp"
                    android:paddingBottom="-10dp"
                    android:paddingTop="-10dp"
                    android:layout_marginBottom="45dp"
                    />
            </LinearLayout>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#12000000"/>



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="2"

                android:gravity="center">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/service_description"
                    android:maxWidth="200dp"
                    android:minWidth="200dp"
                    android:gravity="center"
                    android:maxLines="3"
                    android:textSize="8.43pt"
                    android:textColor="#87000000"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="2"
                android:gravity="center|top">

                <Button
                    android:elevation="15dp"
                    android:layout_width="210dp"
                    android:layout_height="36dp"
                    android:text="@string/service_user"
                    android:textStyle="bold"
                    android:textColor="@color/white"
                    android:background="@drawable/rounded_red_color_button"
                    android:paddingRight="10dp"
                    android:paddingLeft="10dp"
                    android:textSize="10pt"
                    />
            </LinearLayout>
        </LinearLayout>


    </LinearLayout>
</LinearLayout>
